trying to fix section 1

--- a/css/homestyling.scss
+++ b/css/homestyling.scss
@@ -317,6 +317,10 @@ $font-small-mobile: 0.875rem; // Small text
     font-size: $font-h1-mobile;
    }
 
+   .section1 {
+    margin-top: 0%;
+   }
+
    .section1 p {
     font-size: $font-p-mobile;
    }
