--- a/css/homestyling.css
+++ b/css/homestyling.css
@@ -272,6 +272,9 @@ footer nav {
   h1 {
     font-size: 3rem;
   }
+  .section1 {
+    margin-top: 0%;
+  }
   .section1 p {
     font-size: 0.95rem;
   }
