--- a/css/homestyling.css
+++ b/css/homestyling.css
@@ -79,10 +79,11 @@ header p {
   justify-content: center;
   text-align: center;
   margin-top: 5%;
+  position: relative;
 }
 
 .section1 img {
-  position: absolute;
+  position: relative;
   opacity: 35%;
   margin-top: 15%;
   max-width: 100vw;
@@ -124,8 +125,8 @@ header p {
 }
 
 .section2 {
+  position: relative;
   background-color: black;
-  margin-top: 85%;
   color: white;
   padding-left: 2.5%;
   padding-right: 2.5%;
@@ -278,13 +279,12 @@ footer nav {
   .section1 p {
     font-size: 0.95rem;
   }
+  .onep2 {
+    margin-top: 60%;
+  }
   .section1 a {
     font-size: 16px;
     border-radius: 20px;
-  }
-  .section2 {
-    position: relative;
-    margin-top: 110%;
   }
   .tools-container {
     gap: 5%;
