--- a/css/homestyling.scss
+++ b/css/homestyling.scss
@@ -113,10 +113,11 @@ header p {
 .section1 {
     @include center(horizontal);
     margin-top: 5%;
+    position: relative;
 }
 
 .section1 img {
-    position: absolute;
+    position: relative;
     opacity: 35%;
     margin-top: 15%;
     max-width: 100vw;
@@ -151,8 +152,8 @@ header p {
 }
 
 .section2 {
+    position: relative;
     background-color: black;
-    margin-top: 85%;
     color: white;
     padding-left: 2.5%;
     padding-right: 2.5%;
@@ -325,14 +326,13 @@ $font-small-mobile: 0.875rem; // Small text
     font-size: $font-p-mobile;
    }
 
+   .onep2 {
+    margin-top: 60%;
+   }
+
    .section1 a {
     font-size: 16px;
     border-radius: 20px;
-   }
-
-   .section2 {
-    position: relative;
-    margin-top: 110%;
    }
 
    .tools-container {
