--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -267,17 +267,17 @@ footer nav {
     padding-bottom: 7px;
   }
   header p {
-    font-size: 0.95rem;
-    top: 15%;
+    font-size: 0.85rem;
+    top: 15.5%;
   }
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .section1 {
     margin-top: 0%;
   }
   .section1 p {
-    font-size: 0.95rem;
+    font-size: 0.85rem;
   }
   .onep2 {
     margin-top: 60%;
@@ -289,7 +289,7 @@ footer nav {
   .tools-container {
     gap: 5%;
   }
-  .tools-container p {
+  .tools-container div a p {
     font-size: 0.8rem;
   }
   .section3-split {
@@ -313,11 +313,21 @@ footer nav {
   .section4 {
     margin-top: 10%;
   }
+  .section4 a h3 {
+    font-size: 0.95rem;
+  }
+  .section4 a p {
+    font-size: 0.85rem;
+  }
   .section5 {
     margin-top: 5%;
   }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
   .credits p {
-    font-size: 0.95rem;
+    font-size: 0.85rem;
   }
   .credits a {
     margin-left: 5px;
