Almost done landing page and the tools page

--- a/scss/_mobile-font-sizes.scss
+++ b/scss/_mobile-font-sizes.scss
@@ -7,3 +7,7 @@ $font-h5-mobile: 1.125rem;
 
 $font-p-mobile: 0.85rem;       // Paragraph text
 $font-a-mobile: 0.8rem;       // Links
+
+$font-h2-size: 40px;
+$font-h3-size: 30px;
+$font-a-size: 25px;
