--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -16,6 +16,10 @@ h1 {
   margin-top: 20%;
 }
 
+h2 {
+  font-size: 40px;
+}
+
 header img {
   width: 100vw;
   position: absolute;
@@ -84,7 +88,7 @@ header p {
 
 .section1 img {
   position: relative;
-  opacity: 35%;
+  opacity: 10%;
   margin-top: 15%;
   max-width: 100vw;
 }
@@ -96,11 +100,11 @@ header p {
 }
 
 .onep1 {
-  margin-top: 15%;
+  margin-top: 25%;
 }
 
 .onep2 {
-  margin-top: 50%;
+  margin-top: 45%;
 }
 
 .section1 a {
@@ -132,15 +136,36 @@ header p {
   padding-right: 2.5%;
   padding-top: 2.5%;
   padding-bottom: 2.5%;
-}
-
-.tools-container {
-  display: flex;
-  width: 100%;
   display: flex;
   justify-content: center;
   text-align: center;
-  gap: 10%;
+  display: flex;
+}
+
+.section2 h2 {
+  text-wrap: nowrap;
+}
+
+.section2 div img {
+  margin-top: 2.5%;
+  margin-bottom: 2%;
+  width: 55%;
+}
+
+.section2 div a:hover {
+  text-decoration: underline;
+}
+
+.section2 div p, .section2 div h3 {
+  width: 50%;
+}
+
+.tools-container {
+  margin-top: 5%;
+  display: flex;
+  display: flex;
+  justify-content: center;
+  text-align: center;
   text-align: left !important;
 }
 
@@ -175,12 +200,20 @@ header p {
   flex-direction: column;
   width: 50%;
   margin-top: 5%;
-  gap: 20px;
+  gap: 50px;
 }
 
 .links-container div {
   display: flex;
   flex-direction: column;
+}
+
+.links-container div h3 {
+  font-size: 30px;
+}
+
+.links-container div a {
+  font-size: 25px;
 }
 
 .video-container {
@@ -203,8 +236,13 @@ header p {
   margin-top: 5%;
 }
 
+.section3 h2 {
+  font-size: 40px;
+}
+
 .connection-container {
   display: flex;
+  gap: 50px;
 }
 
 .connection-container a {
@@ -279,8 +317,11 @@ footer nav {
   .section1 p {
     font-size: 0.85rem;
   }
+  .onep1 {
+    margin-top: 20%;
+  }
   .onep2 {
-    margin-top: 60%;
+    margin-top: 55%;
   }
   .section1 a {
     font-size: 16px;
@@ -288,6 +329,10 @@ footer nav {
   }
   .tools-container {
     gap: 5%;
+    margin-top: 10%;
+  }
+  .tools-container div img {
+    width: 75%;
   }
   .tools-container div a p {
     font-size: 0.8rem;
@@ -305,7 +350,17 @@ footer nav {
     font-size: 0.8rem;
   }
   .links-container {
+    gap: 20px;
     width: 50%;
+  }
+  .section3 h2 {
+    font-size: 1.25rem;
+  }
+  .links-container div h3 {
+    font-size: 0.95rem;
+  }
+  .links-container div a {
+    font-size: 0.8rem;
   }
   .links-container div {
     word-wrap: break-word;
@@ -332,5 +387,18 @@ footer nav {
   .credits a {
     margin-left: 5px;
     font-size: 0.8rem;
+  }
+  .section2 div img {
+    margin-top: 2.5%;
+    margin-bottom: 2%;
+    width: 75%;
+  }
+  .section2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 5%;
+  }
+  .section2 h2 {
+    align-self: flex-start;
   }
 }/*# sourceMappingURL=homestyling.css.map */
