--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -22,6 +22,10 @@ h1 {
     margin-top: 20%;
 }
 
+h2 {
+  font-size: $font-h2-size;
+}
+
 header img {
     width: 100vw;
     position: absolute;
@@ -78,7 +82,7 @@ header p {
 
 .section1 img {
     position: relative;
-    opacity: 35%;
+    opacity: 10%;
     margin-top: 15%;
     max-width: 100vw;
 }
@@ -90,11 +94,11 @@ header p {
 }
 
 .onep1 {
-    margin-top: 15%;
+    margin-top: 25%;
 }
 
 .onep2 {
-    margin-top: 50%;
+    margin-top: 45%;
 }
 
 .section1 a {
@@ -119,18 +123,40 @@ header p {
     padding-right: 2.5%;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
+    @include center(horizontal);
+    @include flex();
 }
 
+.section2 h2 {
+  text-wrap: nowrap;
+}
+
+.section2 div img {
+  margin-top: 2.5%;
+  margin-bottom: 2%;
+  width: 55%;
+}
+
+
+.section2 div a:hover {
+  text-decoration: underline;
+}
+
+
+.section2 div p, .section2 div h3 {
+  width: 50%;
+}
+
+
 .tools-container {
+  margin-top: 5%;
     @include flex;
-    width: 100%;
     @include center(horizontal);
-    gap: 10%;
     text-align: left !important;
 }
 
 .tools-container a {
-    @include link-style(white)
+    @include link-style(white);
 }
 
 .section3, .section4 {
@@ -158,11 +184,19 @@ header p {
     @include flex-column();
     width: 50%;
     margin-top: 5%;
-    gap: 20px;
+    gap: 50px;
 }
 
 .links-container div {
     @include flex-column();
+}
+
+.links-container div h3 {
+  font-size: $font-h3-size;
+}
+
+.links-container div a {
+  font-size: $font-a-size;
 }
 
 .video-container {
@@ -186,8 +220,13 @@ header p {
     margin-top: 5%;
   }
 
+  .section3 h2 {
+    font-size: $font-h2-size;
+  }
+
   .connection-container {
     @include flex();
+    gap: 50px;
   }
 
   .connection-container a {
@@ -269,8 +308,11 @@ header p {
     font-size: $font-p-mobile;
    }
 
+   .onep1 {
+    margin-top: 20%;
+   }
    .onep2 {
-    margin-top: 60%;
+    margin-top: 55%;
    }
 
    .section1 a {
@@ -280,6 +322,11 @@ header p {
 
    .tools-container {
     gap: 5%;
+    margin-top: 10%;
+   }
+
+   .tools-container div img {
+    width: 75%;
    }
 
    .tools-container div a p {
@@ -303,7 +350,20 @@ header p {
    }
 
    .links-container {
+    gap: 20px;
     width: 50%;
+   }
+
+   .section3 h2 {
+    font-size: $font-h2-mobile;
+   }
+
+   .links-container div h3 {
+    font-size: $font-h3-mobile;
+   }
+
+   .links-container div a {
+    font-size: $font-a-mobile;
    }
 
    .links-container div {
@@ -339,6 +399,21 @@ header p {
    .credits a {
     margin-left: 5px;
     font-size: $font-a-mobile;
+  }
+
+  .section2 div img {
+    margin-top: 2.5%;
+    margin-bottom: 2%;
+    width: 75%;
+  }
+
+  .section2 {
+    @include flex-column();
+    padding-left: 5%;
+  }
+
+  .section2 h2 {
+    align-self: flex-start;
   }
 
 }
