--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -1,1 +1,107 @@
-/*# sourceMappingURL=tools_styling.css.map */
+html {
+  overflow-x: hidden;
+}
+
+.top {
+  position: absolute;
+  right: 2.5%;
+  top: 8%;
+  display: flex;
+  gap: 45px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.top a {
+  color: black;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.top a:hover {
+  text-decoration: underline;
+}
+
+header p {
+  position: absolute;
+  top: 8%;
+  left: 5%;
+  font-weight: 600;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.block-link {
+  background-color: black;
+  color: white !important;
+  border-radius: 8px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 14px;
+  padding-bottom: 14px;
+  display: inline-block;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+}
+.block-link:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-decoration: none !important;
+}
+
+.section1 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+h1 {
+  font-size: 6em;
+  margin-top: 12%;
+}
+
+.section1 img {
+  position: absolute;
+  z-index: -5;
+  top: -12%;
+  right: -12%;
+  opacity: 35%;
+}
+
+.section1 p {
+  position: absolute;
+  margin-top: 22%;
+}
+
+.section2 h2, .section3 h2 {
+  margin-left: 5%;
+}
+
+.tools {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.section4 {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
+}
+
+.connection-container {
+  display: flex;
+  gap: 50px;
+}
+
+.connection-container a {
+  color: black;
+  text-decoration: none;
+}/*# sourceMappingURL=tools_styling.css.map */
