--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -3,3 +3,98 @@
 @import 'positioning';
 
 @import 'mobile-font-sizes';
+
+
+html {
+    overflow-x: hidden;
+}
+
+
+.top {
+    position: absolute;
+    right: 2.5%;
+    top: 8%;
+    display: flex;
+    gap: 45px;
+    @include center(vertical);
+}
+
+.top a {
+    @include link-style(black);
+    font-weight: 600;
+    font-size: 20px;
+}
+
+.top a:hover {
+    text-decoration: underline;
+}
+
+header p {
+    position: absolute;
+    top: 8%;
+    left: 5%;
+    font-weight: 600;
+    font-size: 25px;
+    @include center(vertical);
+}
+
+.block-link {
+    background-color: black;
+    color: white !important;
+    border-radius: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    @include hover-rise();
+}
+
+.section1 {
+    @include center(horizontal);
+}
+
+h1 {
+    font-size: 6em;
+    margin-top: 12%;
+}
+
+.section1 img {
+    position: absolute;
+    z-index: -5;
+    top: -12%;
+    right: -12%;
+    opacity: 35%;
+}
+
+//Fix this later
+.section1 p {
+    position: absolute;
+    margin-top: 22%;
+}
+
+.section2 h2, .section3 h2 {
+    margin-left: 5%;
+}
+
+.tools {
+    @include center(horizontal);
+    @include flex-column();
+}
+
+
+.section4 {
+    @include flex-column();
+    padding-left: 5%;
+    padding-right: 5%;
+    position: relative;
+}
+
+.connection-container {
+    @include flex();
+    gap: 50px;
+  }
+
+  .connection-container a {
+    @include link-style(black);
+  }
+
