--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -2,6 +2,10 @@ html {
   overflow-x: hidden;
 }
 
+* {
+  font-family: "Inter", sans-serif;
+}
+
 .top {
   position: absolute;
   right: 2.5%;
@@ -86,6 +90,28 @@ h1 {
   text-align: center;
   display: flex;
   flex-direction: column;
+}
+
+.tools a {
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  transition: transform 0.4s ease, box-shadow 0.4s ease;
+  background-color: black;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  border-radius: 20px;
+  display: inline-block;
+  margin: auto;
+}
+.tools a:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  text-decoration: none !important;
 }
 
 .section4 {
