--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -10,6 +10,11 @@ html {
 }
 
 
+* {
+    font-family:'Inter', sans-serif;
+}
+
+
 .top {
     position: absolute;
     right: 2.5%;
@@ -76,9 +81,24 @@ h1 {
     margin-left: 5%;
 }
 
+
 .tools {
     @include center(horizontal);
     @include flex-column();
+}
+
+.tools a {
+    @include link-style(white);
+    @include hover-rise();
+    background-color: black;
+    width: fit-content;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
+    border-radius: 20px;
+    display: inline-block;
+    margin: auto;
 }
 
 
