--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -12,7 +12,7 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
-  font-size: 6em;
+  font-size: 5em;
   margin-top: 20%;
 }
 
@@ -250,8 +250,12 @@ header p {
   text-decoration: none;
 }
 
+footer {
+  margin-top: 2.5%;
+}
+
 footer p {
-  margin-left: 10%;
+  margin-left: 5%;
   font-weight: 600;
   font-size: 25px;
   display: flex;
