--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -193,4 +193,15 @@ footer nav {
     left: 45%;
     top: 1%;
   }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
+  .credits p {
+    font-size: 0.85rem;
+  }
+  .credits a {
+    margin-left: 5px;
+    font-size: 0.8rem;
+  }
 }/*# sourceMappingURL=tools_styling.css.map */
