--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -131,9 +131,10 @@ footer {
   }
 
   footer nav {
-    @include flex-column();
+    @include flex();
+    margin-left: 5%;
+    margin-top: 2.5%;
     gap: 15px;
-    margin-left: 75%;
   }
 
   .credits {
