--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -115,11 +115,26 @@ h1 {
 .connection-container {
   display: flex;
   gap: 50px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.connection-container div {
+  text-align: left;
 }
 
 .connection-container a {
   color: black;
   text-decoration: none;
+}
+
+.section3 {
+  display: flex;
+  flex-direction: column;
+  padding-left: 5%;
+  padding-right: 5%;
+  position: relative;
 }
 
 footer {
