removed display of blog link on mobile screen

--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -186,6 +186,10 @@ h1 {
         top: 3.5%;
        }
 
+       .blog-link {
+        display: none;
+       }
+
     .section1 {
         margin-top: 20%;
     }
