--- a/scss/homestyling.css
+++ b/scss/homestyling.css
@@ -325,6 +325,9 @@ footer nav {
     font-size: 0.85rem;
     top: 15.5%;
   }
+  .blog-link {
+    display: none;
+  }
   h1 {
     font-size: 2.5rem;
   }
