--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -312,6 +312,10 @@ footer {
     font-size: $font-p-mobile;
     top: 15.5%;
    }
+
+   .blog-link {
+    display: none;
+   }
    
     h1 {
     font-size: $font-h1-mobile;
