--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -184,6 +184,10 @@ footer {
         top: 2.5%;
        }
 
+       .blog-link {
+        display: none;
+       }
+
     .section1 {
         margin-top: 10%;
     }
