--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -198,6 +198,9 @@ footer nav {
     font-size: 0.85rem;
     top: 3.5%;
   }
+  .blog-link {
+    display: none;
+  }
   .section1 {
     margin-top: 20%;
   }
