--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -196,6 +196,9 @@ footer nav {
     font-size: 0.85rem;
     top: 2.5%;
   }
+  .blog-link {
+    display: none;
+  }
   .section1 {
     margin-top: 10%;
   }
