--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -157,7 +157,7 @@ footer {
 
   @media screen and (max-width: 768px) {
     
-    html {
+    html, body {
      overflow-x: hidden;
     }
 
@@ -190,13 +190,16 @@ footer {
 
     .section1 {
         margin-top: 10%;
+        overflow-x: hidden;
+
     }
 
     .section1 img {
-        overflow-x: hidden;
-        width: 65%;
         left: 45%;
         top: 1%;
+        max-width: 55%;
+        height: auto;
+        display: block;
     }
 
     footer p {
