--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -6,8 +6,6 @@
 
 * {
     font-family:'Inter', sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 html {
@@ -75,7 +73,7 @@ body {
 
 header p {
     position: absolute;
-    top: 8%;
+    top: 5%;
     left: 5%;
     font-weight: 600;
     font-size: 25px;
@@ -140,6 +138,7 @@ h1 {
   .credits {
     @include center(horizontal);
     margin-top: 2.5%;
+    margin-bottom: 2.5%;
   }
 
   .credits a {
@@ -183,7 +182,7 @@ h1 {
 
        header p {
         font-size: $font-p-mobile;
-        top: 3.5%;
+        top: 2%;
        }
 
        .blog-link {
