--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -182,6 +182,15 @@ h1 {
         font-size: 12px !important;
        }
 
+       .block-link {
+        border-radius: 8px;
+        padding-left: 12px;
+        padding-right: 12px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+       }
+    
+
        header p {
         font-size: $font-p-mobile;
         top: 2%;
