--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -194,6 +194,13 @@ footer nav {
   .top a {
     font-size: 12px;
   }
+  .block-link {
+    border-radius: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+  }
   header p {
     font-size: 0.85rem;
     top: 2.5%;
