--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -181,6 +181,15 @@ footer {
         font-size: 12px;
        }
 
+       .block-link {
+        border-radius: 8px;
+        padding-left: 12px;
+        padding-right: 12px;
+        padding-top: 7px;
+        padding-bottom: 7px;
+       }
+    
+
        header p {
         font-size: $font-p-mobile;
         top: 2.5%;
