--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -91,6 +91,11 @@ h1 {
 .tools {
     @include center(horizontal);
     @include flex-column();
+    border-bottom: 2px solid black;
+    padding-bottom: 2.5%;
+    margin-bottom: 2.5%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .tools a {
@@ -105,6 +110,17 @@ h1 {
     border-radius: 20px;
     display: inline-block;
     margin: auto;
+}
+
+.tools-content {
+    @include flex();
+    @include center(horizontal);
+    gap: 50px;
+    margin-bottom: 2%;
+}
+
+.tools-content img {
+    width: 50%;
 }
 
 
