increased margin between download button on tools page

--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -251,4 +251,7 @@ footer nav {
   .section2 {
     margin-top: 18%;
   }
+  .tools-content {
+    margin-bottom: 2.5%;
+  }
 }/*# sourceMappingURL=tools_styling.css.map */
