--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -210,7 +210,7 @@ footer nav {
     top: 2.5%;
   }
   .top a {
-    font-size: 12px;
+    font-size: 12px !important;
   }
   .block-link {
     border-radius: 8px;
