--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -194,7 +194,7 @@ footer {
        }
     
        .top a {
-        font-size: 12px;
+        font-size: 12px !important;
        }
 
        .block-link {
