--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -354,6 +354,10 @@ footer {
     font-size: $font-a-mobile;
    }
 
+   .section2 div p {
+    width: 90%;
+   }
+
    .section3-split {
         gap: 2.5%;
    }
