--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -18,6 +18,7 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
+  margin-bottom: 8%;
 }
 
 .section1 h2 {
@@ -32,30 +33,45 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0.25rem;
-}
-@media screen and (min-width: 600px) {
-  .section2 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.section2 div {
-  width: 100%;
-  margin-top: 10%;
-  margin-bottom: 5%;
-}
-
-.section2 div h2 {
-  margin-top: 2.5%;
-  font-size: 40px;
+  position: relative;
+  margin-top: -10%;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 .section2 img {
-  width: 45%;
+  position: relative;
+  opacity: 15%;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  top: 0;
+}
+
+.content {
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 10%;
+  gap: 50px;
+}
+
+.content div {
+  margin-bottom: 10%;
+  display: flex;
+  flex-direction: column;
+}
+
+.content div p {
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  max-width: 600px;
 }
 
 .top {
