--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -209,7 +209,7 @@ footer nav {
   }
   .section1 p {
     margin-top: 25%;
-    width: 45%;
+    width: 75%;
   }
   h1 {
     font-size: 2.5rem;
@@ -258,9 +258,19 @@ footer nav {
     font-size: 0.8rem;
   }
   .section2 {
-    margin-top: 18%;
+    margin-top: 25%;
+  }
+  .section2 h2, .section3 h2 {
+    margin-bottom: 0%;
   }
   .tools-content {
     margin-bottom: 2.5%;
+    gap: 25px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .tools-content img {
+    width: 65%;
   }
 }/*# sourceMappingURL=tools_styling.css.map */
