--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -190,7 +190,7 @@ footer {
 
     .section1 p {
         margin-top: 25%;
-        width: 45%;
+        width: 75%;
     }
 
     h1 {
@@ -254,12 +254,27 @@ footer {
       }
 
       .section2 {
-        margin-top: 18%;
+        margin-top: 25%;
+      }
+
+      .section2 h2, .section3 h2 {
+        margin-bottom: 0%;
       }
 
       .tools-content {
         margin-bottom: 2.5%;
+        gap: 25px;
+        align-items: center;
+        @include flex-column();
       }
+
+      .tools-content img {
+        width: 65%;
+      }
+
+      
+
+
 
 }
 
