fixed margin top on bottom sections of about us page

--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -252,4 +252,7 @@ footer nav {
     margin-left: 5px;
     font-size: 0.8rem;
   }
+  .section3 {
+    margin-top: 5%;
+  }
 }/*# sourceMappingURL=about-us-styling.css.map */
