--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -47,7 +47,6 @@ body {
     opacity: 15%;
     max-width: 100vw;
     @include center(horizontal);
-    top: 0;
 }
 
 .content {
@@ -258,7 +257,8 @@ h1 {
       }
 
       .section3 {
-        margin-top: 5%;
+        margin-top: 10%;
+        margin-bottom: 0%;
       }
 
 
