--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -256,9 +256,12 @@ h1 {
         font-size: $font-a-mobile;
       }
 
-      .section3 {
+      .section2 {
+        margin-bottom: 20%;
+      }
+
+      .section3 h2 {
         margin-top: 15%;
-        margin-bottom: 0%;
       }
 
 
