--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -118,13 +118,14 @@ h1 {
   display: inline-block;
   transition: transform 0.4s ease, box-shadow 0.4s ease;
   background-color: black;
+  font-size: 18px;
   width: -moz-fit-content;
   width: fit-content;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
   padding-top: 0.5%;
   padding-bottom: 0.5%;
-  border-radius: 20px;
+  border-radius: 15px;
   display: inline-block;
   margin: auto;
 }
@@ -213,6 +214,9 @@ footer nav {
   }
   h1 {
     font-size: 2.5rem;
+  }
+  h2 {
+    font-size: 1.25rem;
   }
   .top {
     gap: 10px;
