--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -111,12 +111,13 @@ h1 {
     @include link-style(white);
     @include hover-rise();
     background-color: black;
+    font-size: 18px;
     width: fit-content;
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
     padding-top: 0.5%;
     padding-bottom: 0.5%;
-    border-radius: 20px;
+    border-radius: 15px;
     display: inline-block;
     margin: auto;
 }
@@ -195,6 +196,10 @@ footer {
 
     h1 {
         font-size: $font-h1-mobile;
+    }
+
+    h2 {
+        font-size: $font-h2-mobile;
     }
 
     .top {
