--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -6,6 +6,7 @@
 
 html {
   overflow-x: hidden;
+  background-color: #f4f0e5;
 }
 
 body {
@@ -34,15 +35,16 @@ body {
   justify-content: center;
   text-align: center;
   position: relative;
-  margin-top: -10%;
+  margin-top: -20%;
   margin-bottom: 0;
   padding: 0;
 }
 
 .section2 img {
   position: relative;
-  opacity: 15%;
+  opacity: 30%;
   max-width: 100vw;
+  top: 0%;
   display: flex;
   justify-content: center;
   text-align: center;
@@ -56,21 +58,35 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin-top: 10%;
-  gap: 50px;
+  top: 15%;
+  gap: 10px;
 }
 
 .content div {
   margin-bottom: 10%;
   display: flex;
   flex-direction: column;
+  line-height: 1.5;
+}
+
+.content .left {
+  margin-right: 50%;
+}
+
+.content .right {
+  margin-left: 50%;
 }
 
 .content div p {
   word-break: break-word;
   overflow-wrap: break-word;
   white-space: normal;
-  max-width: 600px;
+  max-width: 800px;
+  font-size: 20px;
+}
+
+.content div h2 {
+  font-size: 30px;
 }
 
 .top {
@@ -127,12 +143,21 @@ h1 {
   font-size: 5em;
 }
 
+.section3 {
+  margin-top: -15%;
+}
+
 .connection-container {
   display: flex;
   gap: 50px;
   display: flex;
   justify-content: center;
   text-align: center;
+}
+.connection-container div img {
+  width: 50%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
 }
 
 .connection-container div {
@@ -227,18 +252,31 @@ footer nav {
   .section1 {
     margin-top: 20%;
   }
-  .section2 div img {
-    width: 65%;
-  }
   .content {
-    gap: 25px;
+    gap: 10px;
     margin-top: 8%;
+    top: 5%;
+    margin-left: 3%;
+    margin-right: 3%;
+  }
+  .content div h2 {
+    font-size: 1.25rem;
   }
   .content div p {
-    max-width: 300px;
+    max-width: 400px;
+    font-size: 0.85rem;
+  }
+  .content .left {
+    margin-right: 35%;
+  }
+  .content .right {
+    margin-left: 35%;
   }
   .content div {
     margin-bottom: 0%;
+  }
+  footer {
+    margin-top: 10%;
   }
   footer p {
     margin-left: 5%;
