--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -4,15 +4,7 @@
 
 @import 'partials/font-sizes';
 
-* {
-    font-family:'Inter', sans-serif;
-    padding: 0;
-    margin: 0;
-}
-
-html {
-    overflow-x: hidden;
-}
+@import 'partials/generalstyling';
 
 body {
     margin-top: 10%;
@@ -36,7 +28,7 @@ body {
 .section2 {
     @include center(horizontal);
     position: relative;
-    margin-top: -10%;
+    margin-top: -20%;
     margin-bottom: 0; // Add this if bottom margin exists
     padding: 0; 
     
@@ -44,8 +36,9 @@ body {
 
 .section2 img {
     position: relative;
-    opacity: 15%;
+    opacity: 30%;
     max-width: 100vw;
+    top: 0%;
     @include center(horizontal);
 }
 
@@ -54,13 +47,22 @@ body {
     z-index: 1;
     @include flex-column();
     @include center(horizontal);
-    margin-top: 10%;
-    gap: 50px; // space between Mission, Vision, Values
+    top: 15%;
+    gap: 10px; // space between Mission, Vision, Values
 }
 
 .content div {
       margin-bottom: 10%;
       @include flex-column();
+      line-height: 1.5;
+  }
+
+  .content .left {
+    margin-right: 50%;
+  }
+
+  .content .right {
+    margin-left: 50%;
   }
 
   .content div p {
@@ -68,8 +70,13 @@ body {
         word-break: break-word;       // breaks long words or strings when needed
         overflow-wrap: break-word;    // adds extra safety for older browsers
         white-space: normal;          // allows wrapping (in case nowrap was applied)
-        max-width: 600px;             // optional: controls wrapping width
+        max-width: 800px;             // optional: controls wrapping width
+        font-size: 20px;
       
+  }
+
+  .content div h2 {
+    font-size: $font-h3-size;
   }
 
 
@@ -116,10 +123,20 @@ h1 {
     font-size: $font-h1-size;
 }
 
+.section3 {
+    margin-top: -15%;
+}
+
 .connection-container {
     @include flex();
     gap: 50px;
     @include center(horizontal);
+
+    div img {
+        width: 50%;
+        margin-top: 2.5%;
+        margin-bottom: 2.5%;
+      }
   }
 
   .connection-container div {
@@ -223,22 +240,38 @@ h1 {
         margin-top: 20%;
     }
 
-    .section2 div img {
-        width: 65%;
+    .content {
+        gap: 10px;
+        margin-top: 8%;
+        top: 5%;
+        margin-left: 3%;
+        margin-right: 3%;
     }
 
-    .content {
-        gap: 25px;
-        margin-top: 8%;
+    .content div h2 {
+        font-size: $font-h2-mobile;
     }
 
     .content div p {
 
-        max-width: 300px;             // optional: controls wrapping width
+        max-width: 400px;
+        font-size: $font-p-mobile;            // optional: controls wrapping width
+  }
+
+  .content .left {
+    margin-right: 35%;
+  }
+
+  .content .right {
+    margin-left: 35%;
   }
 
   .content div {
     margin-bottom: 0%;
+  }
+
+  footer {
+    margin-top: 10%;
   }
 
     footer p {
