--- a/scss/homestyling.scss
+++ b/scss/homestyling.scss
@@ -1,14 +1,4 @@
-* {
-    font-family:'Inter', sans-serif;
-    padding: 0;
-    margin: 0;
-}
-
-html {
-    overflow-x: hidden;
-    background-color: #f4f0e5;
-}
-
+@import 'partials/generalstyling';
 
 @import 'partials/positioning';
 
@@ -244,6 +234,12 @@ header p {
     @include flex();
     gap: 50px;
     @include center(horizontal);
+
+    div img {
+      width: 50%;
+      margin-top: 2.5%;
+      margin-bottom: 2.5%;
+    }
   }
 
   .connection-container div {
