--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -1,11 +1,12 @@
-html {
-  overflow-x: hidden;
-  margin: 0;
-  padding: 0;
-}
-
 * {
   font-family: "Inter", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  overflow-x: hidden;
+  background-color: #f4f0e5;
 }
 
 .top {
@@ -97,7 +98,7 @@ h1 {
   text-align: center;
   display: flex;
   flex-direction: column;
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid black;
   padding-bottom: 2.5%;
   margin-bottom: 2.5%;
   margin-left: 5%;
@@ -163,6 +164,11 @@ h1 {
   justify-content: center;
   text-align: center;
 }
+.connection-container div img {
+  width: 50%;
+  margin-top: 2.5%;
+  margin-bottom: 2.5%;
+}
 
 .connection-container div {
   text-align: left;
@@ -215,8 +221,14 @@ footer nav {
   h1 {
     font-size: 2.5rem;
   }
-  h2 {
+  .section2 h2, .section3 h2 {
     font-size: 1.25rem;
+  }
+  .section2 h3, .section3 h3 {
+    font-size: 0.95rem;
+  }
+  .section2 p, .section3 p {
+    font-size: 0.85rem;
   }
   .top {
     gap: 10px;
@@ -262,10 +274,13 @@ footer nav {
     font-size: 0.8rem;
   }
   .section2 {
-    margin-top: 25%;
+    margin-top: 30%;
+  }
+  .section3 {
+    margin-top: 5%;
   }
   .section2 h2, .section3 h2 {
-    margin-bottom: 0%;
+    margin-bottom: 2.5%;
   }
   .tools-content {
     margin-bottom: 2.5%;
@@ -275,6 +290,15 @@ footer nav {
     flex-direction: column;
   }
   .tools-content img {
-    width: 65%;
+    width: 50%;
+  }
+  .section4 h2 {
+    font-size: 1.25rem;
+  }
+  .section4 {
+    margin-bottom: 20%;
+  }
+  .connection-container {
+    gap: 10px;
   }
 }/*# sourceMappingURL=tools_styling.css.map */
