--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -235,7 +235,7 @@ footer nav {
     top: 2.5%;
   }
   .top a {
-    font-size: 14px !important;
+    font-size: 14px;
   }
   .block-link {
     border-radius: 8px;
