--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -213,7 +213,7 @@ footer {
        }
     
        .top a {
-        font-size: 14px !important;
+        font-size: 14px;
        }
 
        .block-link {
