--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -246,6 +246,10 @@ h1 {
         top: 5%;
         margin-left: 3%;
         margin-right: 3%;
+
+        p {
+            line-height: 1;
+        }
     }
 
     .content div h2 {
