--- a/scss/partials/_font-sizes.scss
+++ b/scss/partials/_font-sizes.scss
@@ -9,6 +9,7 @@ $font-p-mobile: 0.85rem;       // Paragraph text
 $font-a-mobile: 0.8rem;       // Links
 
 $font-h2-size: 40px;
-$font-h3-size: 30px;
+$font-h3-size: 35px;
 $font-a-size: 25px;
-$font-h1-size: 5em;
+$font-h1-size: 80px;
+$font-p-size: 25px;
