--- a/scss/tools_styling.css
+++ b/scss/tools_styling.css
@@ -66,7 +66,7 @@ header p {
 }
 
 h1 {
-  font-size: 5em;
+  font-size: 80px;
   margin-top: 12%;
 }
 
@@ -82,6 +82,7 @@ h1 {
   position: absolute;
   margin-top: 22%;
   width: 60%;
+  font-size: 25px;
 }
 
 .section2 h2, .section3 h2 {
@@ -89,7 +90,7 @@ h1 {
 }
 
 .section2 {
-  margin-top: 5%;
+  margin-top: 15%;
 }
 
 .tools {
@@ -110,7 +111,7 @@ h1 {
 }
 
 .tools h3 {
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .tools .download-button {
@@ -141,8 +142,18 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
   gap: 50px;
   margin-bottom: 2%;
+}
+.tools-content p {
+  font-size: 25px;
+  line-height: 1.5;
+}
+.tools-content h3 {
+  margin-bottom: 5%;
 }
 
 .tools-content img {
@@ -217,6 +228,7 @@ footer nav {
   .section1 p {
     margin-top: 25%;
     width: 75%;
+    font-size: 0.85rem;
   }
   h1 {
     font-size: 2.5rem;
@@ -300,5 +312,14 @@ footer nav {
   }
   .connection-container {
     gap: 10px;
+  }
+  .tools .download-button {
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border-radius: 12px;
+    margin-top: 5%;
+    margin-bottom: 3%;
   }
 }/*# sourceMappingURL=tools_styling.css.map */
