--- a/scss/tools_styling.scss
+++ b/scss/tools_styling.scss
@@ -69,6 +69,7 @@ h1 {
     position: absolute;
     margin-top: 22%;
     width: 60%;
+    font-size: $font-p-size;
 }
 
 .section2 h2, .section3 h2 {
@@ -76,7 +77,7 @@ h1 {
 }
 
 .section2 {
-    margin-top: 5%;
+    margin-top: 15%;
 }
 
 
@@ -116,8 +117,18 @@ h1 {
 .tools-content {
     @include flex();
     @include center(horizontal);
+    @include center(vertical);
     gap: 50px;
     margin-bottom: 2%;
+
+    p {
+        font-size: $font-p-size;
+        line-height: 1.5;
+    }
+
+    h3 {
+        margin-bottom: 5%;
+    }
 }
 
 .tools-content img {
@@ -189,6 +200,7 @@ footer {
     .section1 p {
         margin-top: 25%;
         width: 75%;
+        font-size: $font-p-mobile;
     }
 
     h1 {
@@ -291,13 +303,25 @@ footer {
       }
 
       
-.section4 {
-    margin-bottom: 20%;
-}
+    .section4 {
+        margin-bottom: 20%;
+    }
 
-.connection-container {
-    gap: 10px;
-}
+    .connection-container {
+        gap: 10px;
+    }
+
+
+    .tools .download-button {
+        padding-left: 4%;
+        padding-right: 4%;
+        padding-top: 0.8%;
+        padding-bottom: 0.8%;
+        border-radius: 12px;
+        margin-top: 5%;
+        margin-bottom: 3%;
+    }
+
 
 
 }
