fix about us page

--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -253,7 +253,7 @@ footer nav {
     margin-top: 20%;
   }
   .content {
-    gap: 10px;
+    gap: 30px;
     margin-top: 8%;
     top: 5%;
     margin-left: 3%;
@@ -277,6 +277,12 @@ footer nav {
   }
   .content div {
     margin-bottom: 0%;
+  }
+  .section2 {
+    margin-top: -10%;
+  }
+  .section2 img {
+    transform: scale(1.5);
   }
   footer {
     margin-top: 10%;
