--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -35,7 +35,7 @@ body {
   justify-content: center;
   text-align: center;
   position: relative;
-  margin-top: -20%;
+  margin-top: -10%;
   margin-bottom: 0;
   padding: 0;
 }
@@ -44,10 +44,10 @@ body {
   position: relative;
   opacity: 30%;
   max-width: 100vw;
-  top: 0%;
   display: flex;
   justify-content: center;
   text-align: center;
+  transform: scale(1.5);
 }
 
 .content {
@@ -59,7 +59,6 @@ body {
   justify-content: center;
   text-align: center;
   top: 15%;
-  gap: 10px;
 }
 
 .content div {
@@ -81,8 +80,8 @@ body {
   word-break: break-word;
   overflow-wrap: break-word;
   white-space: normal;
-  max-width: 800px;
-  font-size: 20px;
+  max-width: 1000px;
+  font-size: 25px;
 }
 
 .content div h2 {
@@ -210,7 +209,7 @@ footer nav {
 }
 
 @media screen and (max-width: 768px) {
-  html {
+  html, main {
     overflow-x: hidden;
   }
   h1 {
@@ -280,9 +279,6 @@ footer nav {
   }
   .section2 {
     margin-top: -10%;
-  }
-  .section2 img {
-    transform: scale(1.5);
   }
   footer {
     margin-top: 10%;
