--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -47,7 +47,7 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  transform: scale(1.5);
+  transform: scale(1.25);
 }
 
 .content {
@@ -143,7 +143,7 @@ h1 {
 }
 
 .section3 {
-  margin-top: -15%;
+  margin-bottom: 0%;
 }
 
 .connection-container {
@@ -174,6 +174,15 @@ h1 {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+}
+.section3 h2 {
+  font-size: 40px;
+}
+.section3 h3 {
+  font-size: 35px;
+}
+.section3 p {
+  font-size: 25px;
 }
 
 footer {
@@ -280,9 +289,6 @@ footer nav {
   .section2 {
     margin-top: -10%;
   }
-  footer {
-    margin-top: 10%;
-  }
   footer p {
     margin-left: 5%;
     font-size: 0.85rem;
@@ -294,10 +300,13 @@ footer nav {
     margin-left: 5px;
     font-size: 0.8rem;
   }
-  .section2 {
-    margin-bottom: 15%;
-  }
   .section3 h2 {
-    margin-top: 15%;
+    font-size: 1.25rem;
+  }
+  .section3 h3 {
+    font-size: 0.95rem;
+  }
+  .section3 p {
+    font-size: 0.85rem;
   }
 }/*# sourceMappingURL=about-us-styling.css.map */
