--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -39,7 +39,7 @@ body {
     opacity: 30%;
     max-width: 100vw;
     @include center(horizontal);
-    transform: scale(1.5);
+    transform: scale(1.25);
 }
 
 .content {
@@ -123,7 +123,7 @@ h1 {
 }
 
 .section3 {
-    margin-top: -15%;
+    margin-bottom: 0%;
 }
 
 .connection-container {
@@ -151,11 +151,24 @@ h1 {
     padding-left: 5%;
     padding-right: 5%;
     position: relative;
+
+    h2 {
+        font-size: $font-h2-size;
+    }
+
+    h3 {
+        font-size: $font-h3-size;
+    }
+
+    p {
+        font-size: $font-p-size;
+    }
 }
 
 
   footer {
     margin-top: 2.5%;
+
   }
 
   footer p {
@@ -279,10 +292,6 @@ h1 {
   }
 
 
-  footer {
-    margin-top: 10%;
-  }
-
     footer p {
         margin-left: 5%;
         font-size: $font-p-mobile;
@@ -298,12 +307,18 @@ h1 {
         font-size: $font-a-mobile;
       }
 
-      .section2 {
-        margin-bottom: 15%;
-      }
+      .section3 {
+        h2 {
+            font-size: $font-h2-mobile;
+        }
 
-      .section3 h2 {
-        margin-top: 15%;
+        h3 {
+            font-size: $font-h3-mobile;
+        }
+
+        p {
+            font-size: $font-p-mobile;
+        }
       }
 
 
