--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -19,7 +19,7 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  margin-bottom: 8%;
+  margin-bottom: 4%;
 }
 
 .section1 h2 {
@@ -41,7 +41,7 @@ body {
 }
 
 .section2 img {
-  position: relative;
+  position: absolute;
   opacity: 30%;
   max-width: 100vw;
   display: flex;
@@ -58,7 +58,7 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  top: 15%;
+  margin-top: 15%;
 }
 
 .content div {
@@ -170,6 +170,7 @@ h1 {
   padding-left: 5%;
   padding-right: 5%;
   position: relative;
+  margin-top: 90%;
 }
 .section3 h2 {
   font-size: 40px;
@@ -254,11 +255,10 @@ footer nav {
     display: none;
   }
   .section1 {
-    margin-top: 20%;
+    margin-top: 10%;
   }
   .content {
     gap: 30px;
-    margin-top: 8%;
     top: 5%;
     margin-left: 3%;
     margin-right: 3%;
@@ -282,9 +282,6 @@ footer nav {
   .content div {
     margin-bottom: 0%;
   }
-  .section2 {
-    margin-top: -10%;
-  }
   footer p {
     margin-left: 5%;
     font-size: 0.85rem;
@@ -295,6 +292,9 @@ footer nav {
   .credits a {
     margin-left: 5px;
     font-size: 0.8rem;
+  }
+  .section3 {
+    margin-top: 130%;
   }
   .section3 h2 {
     font-size: 1.25rem;
