--- a/scss/about-us-styling.scss
+++ b/scss/about-us-styling.scss
@@ -13,7 +13,7 @@ body {
 .section1 {
     @include center(horizontal);
     @include flex-column();
-    margin-bottom: 8%;
+    margin-bottom: 4%;
 }
 
 .section1 h2 {
@@ -35,7 +35,7 @@ body {
 }
 
 .section2 img {
-    position: relative;
+    position: absolute;
     opacity: 30%;
     max-width: 100vw;
     @include center(horizontal);
@@ -47,7 +47,7 @@ body {
     z-index: 1;
     @include flex-column();
     @include center(horizontal);
-    top: 15%;
+    margin-top: 15%;
 }
 
 .content div {
@@ -147,6 +147,7 @@ h1 {
     padding-left: 5%;
     padding-right: 5%;
     position: relative;
+    margin-top: 90%;
 
     h2 {
         font-size: $font-h2-size;
@@ -245,12 +246,11 @@ h1 {
        }
 
     .section1 {
-        margin-top: 20%;
+        margin-top: 10%;
     }
 
     .content {
         gap: 30px;
-        margin-top: 8%;
         top: 5%;
         margin-left: 3%;
         margin-right: 3%;
@@ -282,12 +282,6 @@ h1 {
     margin-bottom: 0%;
   }
 
-
-  .section2 {
-    margin-top: -10%;
-  }
-
-
     footer p {
         margin-left: 5%;
         font-size: $font-p-mobile;
@@ -304,6 +298,8 @@ h1 {
       }
 
       .section3 {
+        margin-top: 130%;
+    
         h2 {
             font-size: $font-h2-mobile;
         }
