0 gap in get connected on mobile

--- a/scss/about-us-styling.css
+++ b/scss/about-us-styling.css
@@ -305,4 +305,7 @@ footer nav {
   .section3 p {
     font-size: 0.85rem;
   }
+  .connection-container {
+    gap: 0px;
+  }
 }/*# sourceMappingURL=about-us-styling.css.map */
