--- a/individual-tools/indiv-tools-scss/indiv-tool-styling.css
+++ b/individual-tools/indiv-tools-scss/indiv-tool-styling.css
@@ -209,6 +209,22 @@ footer nav {
   margin-left: 15px;
 }
 
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  footer p {
+    margin-left: 5%;
+    font-size: 0.85rem;
+  }
+  .credits p {
+    font-size: 0.85rem;
+  }
+  .credits a {
+    margin-left: 5px;
+    font-size: 0.8rem;
+  }
+}
 .section1 {
   display: flex;
   justify-content: center;
@@ -238,4 +254,10 @@ footer nav {
 .section1 .instructions {
   display: flex;
   flex-direction: column;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
 }/*# sourceMappingURL=indiv-tool-styling.css.map */
